[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "funding-service-design-utils"

version = "3.0.0"

authors = [
  { name="DLUHC", email="FundingServiceDesignTeam@levellingup.gov.uk" },
]
description = "Utilities used by the DLUHC Funding Service Design Team"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.10,<4.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "Flask-Babel>=2.0.0,<3.0.0",
    "PyYAML>=6.0,<7.0",
    "python-dotenv>=0.20.0,<0.21.0",
    "rich>=12.4.4,<13.0.0",
    # If adding support for a new major/minor Flask version below, remember to add a tox env to matrix test it.
    "Flask>=2.1.1,<3.0.0",
    "python-json-logger>=2.0.2,<3.0.0",
    "gunicorn>=20.1.0,<21.0.0",
    "pytz>=2022.1",
    "PyJWT[crypto]>=2.4.0",
    "sentry-sdk[flask]>=2.0.0,<3.0.0",
    "requests",
    "flipper-client>=1.3.1",
    "flask-redis==0.4.0",
    "Flask-Migrate",
    "Flask-SQLAlchemy>=3.0.3",
    "sqlalchemy-utils>=0.38.3",
    "beautifulsoup4==4.12.2"
]

[project.urls]
"Homepage" = "https://github.com/communitiesuk/funding-service-design-utils"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py310-A, py310-B, py311-A, py311-B, py312-A, py312-B

[gh-actions]
python =
    3.10: py310
    3.11: py311
    3.12: py312

[testenv]
commands = py.test
deps =
    pytest
    -r requirements-dev.txt

[testenv:py310-A]
basepython = python3.10
deps = {[testenv]deps}
    Flask>=2.2,<2.3

[testenv:py310-B]
basepython = python3.10
deps = {[testenv]deps}
    Flask>=2.3,<3.0

[testenv:py311-A]
basepython = python3.11
deps = {[testenv]deps}
    Flask>=2.2,<2.3

[testenv:py311-B]
basepython = python3.11
deps = {[testenv]deps}
    Flask>=2.3,<3.0

[testenv:py312-A]
basepython = python3.12
deps = {[testenv]deps}
    Flask>=2.2,<2.3

[testenv:py312-B]
basepython = python3.12
deps = {[testenv]deps}
    Flask>=2.3,<3.0
"""
