[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "funding-service-design-utils"

version = "5.1.0"

authors = [
  { name="MHCLG", email="FundingService@communities.gov.uk" },
]
description = "Utilities used by the MHCLG Funding Service Team"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.10,<4.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "Flask-Babel>=2.0.0",
    "PyYAML>=6.0",
    "python-dotenv>=1.0.1",
    "rich>=12.4.4",
    # If adding support for a new major/minor Flask version below, remember to add a tox env to matrix test it.
    "Flask>=2.1.1,!=2.3.0",
    "python-json-logger>=2.0.2",
    "gunicorn>=20.1.0",
    "pytz>=2022.1",
    "PyJWT[crypto]>=2.4.0",
    "sentry-sdk[flask]>=2.0.0",
    "requests>=2.32.3",
    "flask-redis>=0.4.0",
    "Flask-Migrate>=4.0.7",
    "Flask-SQLAlchemy>=3.0.3",
    "sqlalchemy-utils>=0.38.3",
    "beautifulsoup4>=4.12.3",
    "boto3>=1.9.253"
]

[project.optional-dependencies]
toggles = [
    "flipper-client>=1.3.2",
]

[project.urls]
"Homepage" = "https://github.com/communitiesuk/funding-service-design-utils"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py3{10,11,12}-flask{2.2,2.3,3}-sqlalchemy{1,2}
constrain_package_deps = true
use_frozen_constraints = true

[gh-actions]
python =
    3.10: py310
    3.11: py311
    3.12: py312

[testenv]
commands = py.test
deps =
    flask2.2: -c constraints/flask2.2.txt
    flask2.3: -c constraints/flask2.3.txt
    flask3: -c constraints/flask3.txt
    sqlalchemy1: -c constraints/sqlalchemy1.txt
    sqlalchemy2: -c constraints/sqlalchemy2.txt
    -r requirements-dev.txt

[testenv:py310-flask{2.2,2.3,3}-sqlalchemy{1,2}]
basepython = python3.10

[testenv:py311-flask{2.2,2.3,3}-sqlalchemy{1,2}]
basepython = python3.11

[testenv:py312-flask{2.2,2.3,3}-sqlalchemy{1,2}]
basepython = python3.12
"""
